--- a/robofriends/src/App.css
+++ b/robofriends/src/App.css
@@ -10,7 +10,12 @@
 }
 
 .card {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   height: 300px;
+  width: 200px;
   border-radius: 5px;
   text-align: center;
   background: lightseagreen;
@@ -18,6 +23,7 @@
   padding: 15px;
   margin: 20px;
   box-shadow: 4px 5px 5px gray;
+  word-wrap: break-word;
 }
 .card:hover {
   transform: scale(1.1);
