--- a/robofriends/src/App.css
+++ b/robofriends/src/App.css
@@ -1,15 +1,49 @@
+@font-face {
+  font-family: "Pacifico";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("Pacifico Regular"), local("Pacifico-Regular"),
+    url(https://fonts.gstatic.com/s/pacifico/v16/FwZY7-Qmy14u9lezJ-6H6Mk.woff2)
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(
+    to right bottom,
+    #283d89,
+    #274a97,
+    #2557a4,
+    #2364b1,
+    #2171be,
+    #1382cb,
+    #0292d8,
+    #00a3e3,
+    #00baed,
+    #00d1f2,
+    #26e6f3,
+    #5ffbf1
+  );
+  background-repeat: no-repeat;
 }
 
+h1 {
+  font-family: "Pacifico";
+  color: lightseagreen;
+}
 .card-section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  height: 110vh;
 }
 
 .card {
@@ -25,7 +59,7 @@
   cursor: pointer;
   padding: 15px;
   margin: 20px;
-  box-shadow: 4px 5px 5px gray;
+  box-shadow: 4px 5px 5px black;
   word-wrap: break-word;
 }
 .card:hover {
