--- a/robofriends/src/App.css
+++ b/robofriends/src/App.css
@@ -60,7 +60,7 @@ h1 {
   padding: 15px;
   margin: 20px;
   box-shadow: 4px 5px 5px black;
-  word-wrap: break-word;
+  /* white-space: nowrap; */
 }
 .card:hover {
   transform: scale(1.1);
